--- a/src/app/shared/navigation/navigation.component.scss
+++ b/src/app/shared/navigation/navigation.component.scss
@@ -1,13 +1,13 @@
 .navigation-container {
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 70px;
-  display: flex;
-  color: white;
-  position: fixed;
-  font-weight: 600;
-  align-items: center;
-  background-color: #1976d2;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    color: white;
+    position: fixed;
+    font-weight: 600;
+    align-items: center;
+    background-color: #5352ed;
 }
