--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,5 +1,9 @@
 <nav class="navigation-container">
     <div class="navigation-wrapper container">
         <span>Angular Dynamic User Dashboard</span>
+
+        <div class="navigation-options">
+            <a routerLink="/" class="navigation-menu">Users</a>
+        </div>
     </div>
 </nav>
