--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navigation></app-navigation>
 
-<main class="dashboard-content-wrapper">
-  <router-outlet></router-outlet>
+<main class="dashboard-content-wrapper container">
+    <router-outlet></router-outlet>
 </main>
