--- a/src/app/pages/user-details/user-details.component.scss
+++ b/src/app/pages/user-details/user-details.component.scss
@@ -46,3 +46,18 @@
         }
     }
 }
+
+.user-data-loader {
+    height: 400px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 24px;
+
+    .btn-loader {
+        width: 46px !important;
+        height: 46px !important;
+    }
+}
