--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -3,5 +3,6 @@
     [totalPages]="totalPages"
     [currentPage]="currentPage"
     [isLoadingContent]="isFetchingUsers"
+    [searchFormControl]="searchFormControl"
     (changePageEvent)="handlePageChangeEvent($event)"
 ></app-user-table>
